--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,7 @@ parts:
     chapters:
     - file: content/interview_with_xinof
     - file: content/stumpy_tutorial
+    - file: content/matplotblog
   - caption: Data Science
     chapters:
     - file: content/labeling
