--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
     - file: content/labeling
     - file: content/sklearn_sprint
   - caption: Cryptography / Cryptanalysis
+    chapters:
     - file: content/cryptanalysis
     - file: content/mod26
     - file: content/the_numbers
