--- a/_toc.yml
+++ b/_toc.yml
@@ -22,4 +22,5 @@ parts:
     - file: content/no_padding_no_problem
   - caption: Recommended Reading
     chapters:
-    - file: content/draft_no_4
+    - file: content/nonfiction
+    - file: content/fiction
