--- a/_toc.yml
+++ b/_toc.yml
@@ -13,6 +13,7 @@ parts:
     chapters:
     - file: content/labeling
     - file: content/sklearn_sprint
+    - file: content/git_scraping
   - caption: Cryptography / Cryptanalysis
     chapters:
     - file: content/cryptanalysis
