--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
     # Build the book
     - name: Build the book
       env: 
-        EBIRD_API: '${{ secrets.EBIRD_API }}'
+        EBIRD_API: ${{ secrets.EBIRD_API }}
       run: |
         jupyter-book build .
 
