--- a/_toc.yml
+++ b/_toc.yml
@@ -15,6 +15,7 @@ parts:
     - file: content/sklearn_sprint
     - file: content/git_scraping
     - file: content/bird
+    - file: content/NASA
   - caption: Cryptography / Cryptanalysis
     chapters:
     - file: content/cryptanalysis
