--- a/_toc.yml
+++ b/_toc.yml
@@ -8,6 +8,7 @@ parts:
     chapters:
     - file: content/HackThisAI
     - file: content/easy_credit_check
+    - file: content/aml_references
   - caption: External Writing
     chapters:
     - file: content/interview_with_xinof
