--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,33 @@ numpy
 scipy
 geopandas
 pandas
-wordcloud
+cachetools==4.2.4
+category-encoders==2.2.2
+certifi==2021.10.8
+docker-pycreds==0.4.0
+docstring-parser==0.13
+gitdb==4.0.9
+GitPython==3.1.24
+jsonargparse==4.1.0
+lightning-flash==0.6.0
+llvmlite==0.37.0
+Markdown==3.3.6
+multidict==5.2.0
+nltk==3.6.5
+oauthlib==3.1.1
+pandas==1.1.5
+Pillow==8.4.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pytorch-lightning==1.3.6
+pytorch-tabnet==3.0.0
+pytorch-tabular==0.7.0
+Sphinx==4.2.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+torch==1.10.1
+torchmetrics==0.6.1
+torchvision==0.11.2
+urllib3==1.26.7
+requests
