--- a/_toc.yml
+++ b/_toc.yml
@@ -19,6 +19,7 @@ parts:
     - file: content/matplotblog
   - caption: Data Science
     chapters:
+    - file: content/first_pycon
     - file: content/sklearn_sprint
     - file: content/git_scraping
   - caption: Recommended Reading
