--- a/_toc.yml
+++ b/_toc.yml
@@ -14,6 +14,7 @@ parts:
     - file: content/mlmac
     - file: content/aml_for_profit
     - file: content/interviews
+    - file: content/preparedness_challenge
   - caption: External Writing
     chapters:
     - file: content/interview_with_xinof
