--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
   deploy-book:
     runs-on: ubuntu-latest
     permissions:
+      pages: write
       id-token: write 
     steps:
     - uses: actions/checkout@v3
