--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,18 @@
 name: deploy-book
 
-# Only run this when the master branch changes
 on:
   push:
     branches:
     - master
-    # If your git repository has the Jupyter Book within some-subfolder next to
-    # unrelated files, you can make this run only if a file within that specific
-    # folder has been modified.
-    #
-    # paths:
-    # - some-subfolder/**
 
-# This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
   deploy-book:
     runs-on: ubuntu-latest
     permissions:
       pages: write
-      id-token: write 
+      id-token: write
+    environment:
+      name: github-pages  # Add this line to specify the environment for deployment
     steps:
     - uses: actions/checkout@v3
 
@@ -34,7 +28,7 @@ jobs:
 
     # Build the book
     - name: Build the book
-      env: 
+      env:
         EBIRD_API: ${{ secrets.EBIRD_API }}
         NASA_API: ${{ secrets.NASA_API }}
       run: |
