--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       pages: write
       id-token: write
     environment:
-      name: github-pages  # Add this line to specify the environment for deployment
+      name: github-pages
     steps:
     - uses: actions/checkout@v3
 
@@ -40,9 +40,13 @@ jobs:
       with:
         path: "_build/html"
 
+    # Create gh-pages branch
+    - name: Create gh-pages branch
+      run: |
+        git checkout -b gh-pages
+        git push -f origin gh-pages
+
     # Deploy the book's HTML to GitHub Pages
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
-      with:
-        source-branch: master
